tests/snapshots/snapshot__full_ui_zero_state_40x10.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────┐
│TUI Translator   │   ja-JP → vi   │   │
└──────────────────────────────────────┘
┌ Audio — Default device ──────────────┐
│                  0%                  │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│ idle/local Lang:vi 0p                │
└──────────────────────────────────────┘
 ?  Spc  T  L  S  M  R  Q
