tests/snapshots/snapshot__full_ui_zero_state_60x10.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────────────────────────┐
│      TUI Translator   │   ja-JP → vi   │   STT: idle     │
└──────────────────────────────────────────────────────────┘
┌ Audio — Default device ──────────────────────────────────┐
│                            0%                            │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ idle | Lang:vi | TTS:off/spk | 0p | no charges | 0:00    │
└──────────────────────────────────────────────────────────┘
 ?  Spc  T  L  S  M  R  Q
