tests/snapshots/snapshot__full_ui_zero_state_60x20.snap
---
source: tests/snapshot.rs
assertion_line: 1617
expression: rendered
---
┌──────────────────────────────────────────────────────────┐
│     TUI Translator   │   ja-JP → vi   │   STT: local     │
└──────────────────────────────────────────────────────────┘
┌ Audio — Default device ──────────────────────────────────┐
│                            0%                            │
└──────────────────────────────────────────────────────────┘
┌ Subtitles ───────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                    No subtitles yet.                     │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│ I/L | Lang:vi | TTS:off/spk | 0p | no charges | 0:00     │
└──────────────────────────────────────────────────────────┘
 ?  Spc  T  L  S  M  R  Tab  Q
