tests/snapshots/snapshot__full_ui_zero_state_80x24.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────────────────────────────────────────────┐
│               TUI Translator   │   ja-JP → vi   │   STT: local               │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Audio — Default device ──────────────────────────────────────────────────────┐
│                                      0%                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                              No subtitles yet.                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ STT: local │ Lang:vi │ TTS:off │ Route:spk │ 0 pairs │ no charges │ 0:00     │
└──────────────────────────────────────────────────────────────────────────────┘
 ? help  Space pause  T audio  L lang  S settings  M metrics  R reload  Q quit
