tests/snapshots/snapshot__help_overlay_80x24.snap
---
source: tests/snapshot.rs
assertion_line: 1335
expression: "render_help(80, 24, 0)"
---
                                                                                
                                                                                
                                                                                
                                                                                
            ┌ Help — press ? or Esc to close ──────────────────────┐            
            │ Keyboard Shortcuts                                   │            
            │                                                      │            
            │  ↑ / ↓     Scroll subtitles/help                     │            
            │  Home       Scroll to top                            │            
            │  End        Scroll to bottom / auto-follow           │            
            │  Space      Pause / resume translation               │            
            │  T          Toggle TTS audio output                  │            
            │  M          Toggle metrics panel (compact/expanded)  │            
            │  L          Change target language                   │            
            │  S          Settings (F2/Ctrl+D cycles field values) │            
            │  R          Reload config from disk                  │            
            │  ?          Show / hide this help                    │            
            │  Esc        Dismiss this overlay                     │            
            │  q / Ctrl+C Quit — shows session summary             │            
            └──────────────────────────────────────────────────────┘
