tests/snapshots/snapshot__help_overlay_80x8_bottom.snap
---
source: tests/snapshot.rs
assertion_line: 1773
expression: "render_help(80, 8, 9999)"
---
            ┌ Help [13/13] — ↑↓ scroll · Esc close ────────────────┐            
            │  ?          Show / hide this help                    │            
            │  Esc        Dismiss this overlay                     │            
            │  Tab        Switch A/B pane focus (dual-slot mode)   │            
            │  [ / ]      Mic gain  -1/+1 dB    { / } TTS vol  -1/+│            
            │  0          Reset mic gain and TTS volume to 0 dB (CT│            
            │  q / Ctrl+C Quit — shows session summary             │            
            └──────────────────────────────────────────────────────┘
