tests/snapshots/snapshot__help_overlay_80x8_top.snap
---
source: tests/snapshot.rs
expression: "render_help(80, 8, 0)"
---
            ┌ Help [0/7] — ↑↓ scroll · Esc close ──────────────────┐            
            │ Keyboard Shortcuts                                   │            
            │                                                      │            
            │  ↑ / ↓     Scroll subtitles/help                     │            
            │  Home       Scroll to top                            │            
            │  End        Scroll to bottom / auto-follow           │            
            │  Space      Pause / resume translation               │            
            └──────────────────────────────────────────────────────┘
