tests/snapshots/snapshot__hints_bar_narrow.snap
---
source: tests/snapshot.rs
expression: "render_hints(&bar, 60, 1)"
---
 ?  Spc  T  L  S  M  R  Q
