tests/snapshots/snapshot__hints_bar_tts_off.snap
---
source: tests/snapshot.rs
assertion_line: 862
expression: "render_hints(&bar, 80, 1)"
---
 ? help  Space pause  T audio  L lang  S settings  M metrics  R reload  B model
