tests/snapshots/snapshot__hints_bar_tts_on.snap
---
source: tests/snapshot.rs
expression: "render_hints(&bar, 80, 1)"
---
 ? help  Space pause  T audio  L lang  M metrics  R reload  Q quit
