tests/snapshots/snapshot__lang_prompt_narrow_40x8.snap
---
source: tests/snapshot.rs
expression: rendered
---
                                        
┌ Change Language ─────────────────────┐
│ Target language code (e.g. ja, fr, de│
│                                      │
│ > ja_                                │
└──────────────────────────────────────┘
